--- a/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
@@ -9,58 +9,40 @@
         <div class="col s12">
             <div class="page-title">Blank Page</div>
         </div>
-        <div class="col s12">
-            <div class="card">
-                <div class="card-content">
-                    <form method="post" action="/Admin/Company/Add">
+        <form method="post" action="/Admin/Company/Add">
+            <div class="col s12 m12 l6">
+                <div class="card">
+                    <div class="card-content">
+
                         <span class="card-title">Company Settings</span><br>
                         <div class="row">
-                            <div class="row">
-                                <div class="input-field col s6">
-                                    <input name="Name" id="icon_prefix" type="text" class="validate">
-                                    <label for="icon_prefix">Company Name</label>
-                                </div>
-                                <div class="input-field col s6">
-                                    @Html.DropDownListFor(m => m.MotherCompanyId, new SelectList(Model.MotherCompanies, "Id", "Name"), "", new { @class = "" })                                    
-                                    <label>Mother Company</label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <input id="address" name="Address" type="text">
-                                    <label for="textarea1">Address</label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <label for="address">Phone </label>
-                                    <input id="address" name="Phone" type="text">
-                                </div>
-                                <div class="input-field col s6">
-                                    <label for="address">Email</label>
-                                    <input id="address" name="Email" type="text">
-                                </div>
-                                <div class="input-field col s6">
-                                    <label for="address">Fax</label>
-                                    <input id="address" name="Fax" type="text">
-                                </div>
-                                <div class="input-field col s6">
-                                    <input name="ContactPerson" id="icon_prefix" type="text" class="validate">
-                                    <label for="icon_prefix">Primary Contact </label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <select>
-                                        <option value="" disabled selected>Choose Month</option>
-                                        <option value="1">January</option>
-                                        <option value="2">February</option>
-                                        <option value="3">March</option>
-                                    </select>
-                                    <label>Fiscal Year Start </label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <input id="icon_prefix" type="tel" class="validate">
-                                    <label for="icon_prefix">Primary Contact Email </label>
-                                </div>
-                                <div class="input-field col s6">
-                                    <input id="icon_prefix" type="tel" class="validate">
-                                    <label for="icon_prefix">Primary Contact Phone </label>
-                                </div>
+                            <div class="input-field col s12">
+                                <input name="Name" id="icon_prefix" type="text" class="validate">
+                                <label for="icon_prefix">Company Name</label>
+                            </div>
+                            <div class="input-field col s12">
+                                @Html.DropDownListFor(m => m.MotherCompanyId, new SelectList(Model.MotherCompanies, "Id", "Name"), "", new { @class = "" })
+                                <label>Mother Company</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="address" name="Address" type="text">
+                                <label for="textarea1">Address</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <label for="address">Phone </label>
+                                <input id="address" name="Phone" type="text">
+                            </div>
+                            <div class="input-field col s12">
+                                <label for="address">Email</label>
+                                <input id="address" name="Email" type="text">
+                            </div>
+                            <div class="input-field col s12">
+                                <label for="address">Fax</label>
+                                <input id="address" name="Fax" type="text">
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="birthdate" type="text" class="datepicker">
+                                <label>Fiscal Year Start </label>
                             </div>
                         </div>
                         <div class="row">
@@ -77,15 +59,51 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col s4 offset-m7 offset-m1">
+                            <div class="col s6 offset-m6 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
                                 <input type="button" class="btn btn-default red col s4 offset-m1" value="Cancel" />
                             </div>
                         </div>
-                    </form>
+
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+            <div class="col s12 m12 l6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Contact Person Details</span><br>
+                        <div class="row">                            
+                            <div class="input-field col s12">
+                                <input name="ContactPerson" id="icon_prefix" type="text" class="validate">
+                                <label for="icon_prefix">Primary Contact </label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input name="ContactPersonEmail" id="icon_prefix" type="tel" class="validate">
+                                <label for="icon_prefix">Primary Contact Email </label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input name="ContactPersonPhone" id="icon_prefix" type="tel" class="validate">
+                                <label for="icon_prefix">Primary Contact Phone </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>  
+    </div>        
 </main>
 
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $('.datepicker').pickadate({
+                selectDays: false,
+                selectMonths: true, // Creates a dropdown to control month
+                selectYears: 15 // Creates a dropdown of 15 years to control year
+            });
+        });
+    </script>
+    
+
+}
