--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -1,12 +1,14 @@
 ﻿<ul class="sidebar-menu collapsible collapsible-accordion" data-collapsible="accordion">
     <li class="no-padding"><a class="waves-effect waves-grey" href="index.html"><i class="material-icons">settings_input_svideo</i>Dashboard</a></li>
     <li class="no-padding">
-        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Apps<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Admin Center<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
             <ul>
-                <li><a href="mailbox.html">Mailbox</a></li>
-                <li><a href="search.html">Search</a></li>
-                <li><a href="todo.html">Todo</a></li>
+                <li><a href="/Admin/Company/Index">Company</a></li>
+                <li><a href="/Admin/Branch/Index">Branch</a></li>
+                <li><a href="/Admin/Department/Index">Department</a></li>
+                <li><a href="/Admin/Position/Index">Position</a></li>
+                <li><a href="/Admin/Leave/Index">Leave</a></li>
             </ul>
         </div>
     </li>
@@ -15,26 +17,6 @@
         <div class="collapsible-body">
             <ul>
                 <li><a href="ui-accordions.html">Accordion</a></li>
-                <li><a href="ui-badges.html">Badges</a></li>
-                <li><a href="ui-buttons.html">Buttons</a></li>
-                <li><a href="ui-typography.html">Typography</a></li>
-                <li><a href="ui-cards.html">Cards</a></li>
-                <li><a href="ui-carousel.html">Carousel</a></li>
-                <li><a href="ui-chips.html">Chips</a></li>
-                <li><a href="ui-color.html">Color</a></li>
-                <li><a href="ui-collections.html">Collections</a></li>
-                <li><a href="ui-dropdown.html">Dropdown</a></li>
-                <li><a href="ui-dialogs.html">Dialogs</a></li>
-                <li><a href="ui-grid.html">Grid</a></li>
-                <li><a href="ui-helpers.html">Helpers</a></li>
-                <li><a href="ui-modals.html">Modals</a></li>
-                <li><a href="ui-media.html">Media</a></li>
-                <li><a href="ui-icons.html">Icons</a></li>
-                <li><a href="ui-parallax.html">Parallax</a></li>
-                <li><a href="ui-preloader.html">Preloader</a></li>
-                <li><a href="ui-shadow.html">Shadow</a></li>
-                <li><a href="ui-tabs.html">Tabs</a></li>
-                <li><a href="ui-waves.html">Waves</a></li>
             </ul>
         </div>
     </li>
@@ -43,10 +25,6 @@
         <div class="collapsible-body">
             <ul>
                 <li><a href="miscellaneous-sweetalert.html">Sweet Alert</a>
-                <li><a href="miscellaneous-code-editor.html">Code Editor</a>
-                <li><a href="miscellaneous-nestable.html">Nestable List</a>
-                <li><a href="miscellaneous-masonry.html">Masonry</a>
-                <li><a href="miscellaneous-idle-timer.html">Idle Timer</a>
             </ul>
         </div>
     </li>        
@@ -55,9 +33,6 @@
         <div class="collapsible-body">
             <ul>
                 <li><a href="table-static.html">Static Tables</a></li>
-                <li><a href="table-responsive.html">Responsive Tables</a></li>
-                <li><a href="table-comparison.html">Comparison Table</a></li>
-                <li><a href="table-data.html">Data Tables</a></li>
             </ul>
         </div>
     </li>
