company list view updated.

--- a/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
@@ -54,7 +54,7 @@
                                     <label>Fiscal Year Start </label>
                                 </div>
                                 <div class="input-field col s6">
-                                    <input id="icon_prefix" type="tel" class="validate">
+                                    <input name="ContactPersonEmail" id="icon_prefix" type="tel" class="validate">
                                     <label for="icon_prefix">Primary Contact Email </label>
                                 </div>
                                 <div class="input-field col s6">
