--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -1,52 +1,26 @@
 ﻿<ul class="sidebar-menu collapsible collapsible-accordion" data-collapsible="accordion">
     <li class="no-padding"><a class="waves-effect waves-grey" href="index.html"><i class="material-icons">settings_input_svideo</i>Dashboard</a></li>
     <li class="no-padding">
-        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Apps<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Admin Center<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
             <ul>
-                <li><a href="mailbox.html">Mailbox</a></li>
-                <li><a href="search.html">Search</a></li>
-                <li><a href="todo.html">Todo</a></li>
+                <li><a href="/Admin/Company/Index">Company</a></li>
+                <li><a href="/Admin/Branch/Index">Branch</a></li>
+                <li><a href="/Admin/Department/Index">Department</a></li>
+                <li><a href="/Admin/Position/Index">Position</a></li>
+                <li><a href="/Admin/Shift/Index">Shift</a></li>
+                <li><a href="/Admin/Holiday/Index">Holiday</a></li>
+                <li><a href="/Admin/Leave/Index">Leave Type</a></li>
             </ul>
         </div>
     </li>
+    <li class="no-padding"><a class="waves-effect waves-grey" href="charts.html"><i class="material-icons">trending_up</i>Attendance</a></li>
     <li class="no-padding">
-        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">code</i>Components<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">star_border</i>Leave Management<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
             <ul>
-                <li><a href="ui-accordions.html">Accordion</a></li>
-                <li><a href="ui-badges.html">Badges</a></li>
-                <li><a href="ui-buttons.html">Buttons</a></li>
-                <li><a href="ui-typography.html">Typography</a></li>
-                <li><a href="ui-cards.html">Cards</a></li>
-                <li><a href="ui-carousel.html">Carousel</a></li>
-                <li><a href="ui-chips.html">Chips</a></li>
-                <li><a href="ui-color.html">Color</a></li>
-                <li><a href="ui-collections.html">Collections</a></li>
-                <li><a href="ui-dropdown.html">Dropdown</a></li>
-                <li><a href="ui-dialogs.html">Dialogs</a></li>
-                <li><a href="ui-grid.html">Grid</a></li>
-                <li><a href="ui-helpers.html">Helpers</a></li>
-                <li><a href="ui-modals.html">Modals</a></li>
-                <li><a href="ui-media.html">Media</a></li>
-                <li><a href="ui-icons.html">Icons</a></li>
-                <li><a href="ui-parallax.html">Parallax</a></li>
-                <li><a href="ui-preloader.html">Preloader</a></li>
-                <li><a href="ui-shadow.html">Shadow</a></li>
-                <li><a href="ui-tabs.html">Tabs</a></li>
-                <li><a href="ui-waves.html">Waves</a></li>
-            </ul>
-        </div>
-    </li>
-    <li class="no-padding">
-        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">star_border</i>Plugins<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
-        <div class="collapsible-body">
-            <ul>
-                <li><a href="miscellaneous-sweetalert.html">Sweet Alert</a>
-                <li><a href="miscellaneous-code-editor.html">Code Editor</a>
-                <li><a href="miscellaneous-nestable.html">Nestable List</a>
-                <li><a href="miscellaneous-masonry.html">Masonry</a>
-                <li><a href="miscellaneous-idle-timer.html">Idle Timer</a>
+                <li><a href="miscellaneous-sweetalert.html">Pending Leave</a>
+                <li><a href="miscellaneous-code-editor.html">Reports</a>
             </ul>
         </div>
     </li>        
