updated add views.

--- a/TestHR.Web/Areas/Admin/Views/Branch/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Branch/Add.cshtml
@@ -7,13 +7,13 @@
 <main class="mn-inner">
     <div class="row">
         <div class="col s12">
-            <div class="page-title">Blank Page</div>
+            <div class="page-title">Add New Branch</div>
         </div>
         <div class="col s12">
             <div class="card">
                 <div class="card-content">
+                    <span class="card-title">Branch Settings</span><br>
                     <form method="post" action="/Admin/Branch/Add">
-                        <span class="card-title">Company Settings</span><br>
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
@@ -21,29 +21,16 @@
                                     <label for="icon_prefix">Branch Name</label>
                                 </div>
                                 <div class="input-field col s6">
-                                    @Html.DropDownListFor(m => m.CompanyId, new SelectList(Model.Company, "Id", "Name"),"--Select--",new { @class = "" })
+                                    @Html.DropDownListFor(m => m.CompanyId, new SelectList(Model.Company, "Id", "Name"), "--Select--", new { @class = "" })
                                     <label>Company</label>
                                 </div>
                                 <div class="input-field col s6">
                                     <input id="Description" name="Description" type="text">
                                     <label for="textarea1">Description</label>
                                 </div>
-                                
+
                             </div>
                         </div>
-                        @*<div class="row">
-                            <div class="col s6">
-                                <div class="file-field input-field">
-                                    <div class="btn teal lighten-1">
-                                        <span>Company Banner</span>
-                                        <input type="file">
-                                    </div>
-                                    <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>*@
                         <div class="row">
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
