--- a/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
@@ -7,13 +7,13 @@
 <main class="mn-inner">
     <div class="row">
         <div class="col s12">
-            <div class="page-title">Blank Page</div>
+            <div class="page-title">Add New Company</div>
         </div>
         <div class="col s12">
             <div class="card">
                 <div class="card-content">
+                    <span class="card-title">Company Settings</span><br>
                     <form method="post" action="/Admin/Company/Add">
-                        <span class="card-title">Company Settings</span><br>
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
@@ -21,7 +21,7 @@
                                     <label for="icon_prefix">Company Name</label>
                                 </div>
                                 <div class="input-field col s6">
-                                    @Html.DropDownListFor(m => m.MotherCompanyId, new SelectList(Model.MotherCompanies, "Id", "Name"), "", new { @class = "" })                                    
+                                    @Html.DropDownListFor(m => m.MotherCompanyId, new SelectList(Model.MotherCompanies, "Id", "Name"), "", new { @class = "" })
                                     <label>Mother Company</label>
                                 </div>
                                 <div class="input-field col s6">
