--- a/TestHR.Web/Areas/Admin/Views/Department/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Department/Add.cshtml
@@ -7,13 +7,13 @@
 <main class="mn-inner">
     <div class="row">
         <div class="col s12">
-            <div class="page-title">Blank Page</div>
+            <div class="page-title">Add New Department</div>
         </div>
         <div class="col s12">
             <div class="card">
                 <div class="card-content">
+                    <span class="card-title">Department Settings</span><br>
                     <form method="post" action="/Admin/Department/Add">
-                        <span class="card-title">Department Settings</span><br>
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
@@ -32,18 +32,18 @@
                             </div>
                         </div>
                         @*<div class="row">
-                                <div class="col s6">
-                                    <div class="file-field input-field">
-                                        <div class="btn teal lighten-1">
-                                            <span>Company Banner</span>
-                                            <input type="file">
-                                        </div>
-                                        <div class="file-path-wrapper">
-                                            <input class="file-path validate" type="text">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>*@
+                <div class="col s6">
+                    <div class="file-field input-field">
+                        <div class="btn teal lighten-1">
+                            <span>Company Banner</span>
+                            <input type="file">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text">
+                        </div>
+                    </div>
+                </div>
+            </div>*@
                         <div class="row">
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
