--- a/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
@@ -8,7 +8,7 @@
     <main class="mn-inner">
         <div class="row">
             <div class="col s12">
-                <div class="page-title">Company List</div>
+                <div class="page-title">Branch List</div>
             </div>
             <div class="col s12 m12 l12">
                 <div class="card">
@@ -27,7 +27,7 @@
                                 {
                                     <tr>
                                         <td>@branch.Name</td>
-                                        <td>@branch.Company</td>
+                                        <td>@branch.Company.Name</td>
                                         <td>@branch.Description</td>
                                         
                                         <td>
