--- a/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestHR.Entities.Department>
+﻿@model IEnumerable<TestHR.Entities.Holiday>
     @{
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -8,28 +8,30 @@
     <main class="mn-inner">
         <div class="row">
             <div class="col s12">
-                <div class="page-title">Department List</div>
+                <div class="page-title">Holiday List</div>
             </div>
             <div class="col s12 m12 l12">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">Department</span>
+                        <span class="card-title">Holiday</span>
                         <table id="companyList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
-                                    <th>DepartmentName</th>
-                                    <th>Company</th>
-                                    <th>Employees</th>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th>DateFrom</th>
+                                    <th>DateTo</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var department in Model)
+                                @foreach (var holiday in Model)
                                 {
                                     <tr>
-                                        <td>@department.Name</td>
-                                        <td>@department.Company.Name</td>
-                                        <td>@department.Employees</td>
+                                        <td>@holiday.Name</td>
+                                        <td>@holiday.Description</td>
+                                        <td>@holiday.DateFrom</td>
+                                        <td>@holiday.DateTo</td>
                                         <td>
                                             <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                             <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
