--- a/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
@@ -1,55 +1,85 @@
-﻿@model TestHR.Web.Areas.Admin.Models.PositionModel
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
-}
+﻿@model IEnumerable<TestHR.Entities.Position>
+    @{
+        ViewBag.Title = "Index";
+        Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+    }
 
-<main class="mn-inner">
-<div class="row">
-    <div class="col s12">
-        <div class="page-title">Position List</div>
-    </div>
-    <div class="col s12 m12 l12">
-        <div class="card">
-            <div class="card-content">
-                  <table id="example" class="display responsive-table datatable-example">
-                      <thead>
-                          <tr>
-                              <th>Position</th>
-                              <th>Company</th>
-                              <th>Reporting Position</th>
-                             
-                          </tr>
-                      </thead>
-                      <tbody>
-                          @foreach (var position in Model.ReportingPositions)
-                          {
-                              <tr>
-                                  <td>@position.Name</td>
-                                  @if (position.Company != null)
-                                  {
-                                      <td>@position.Company.Name</td>
-                                  }
-                                  else
-                                  {
-                                      <td>Null</td>
-                                  }
-                                  @if (position.ReportingPosition != null)
-                                  {
-                                      <td>@position.ReportingPosition.Name</td>
-                                  }
-                                  else
-                                  {
-                                       <td>Null</td>
-                                  }
-                              </tr>
-                          }
-                      </tbody>
+    <main class="mn-inner">
+        <div class="row">
+            <div class="col s12">
+                <div class="page-title">Position List</div>
+            </div>
+            <div class="col s12 m12 l12">
+                <div class="card">
+                    <div class="card-content">
+                        <table id="example" class="display responsive-table datatable-example">
+                            <thead>
+                                <tr>
+                                    <th>Position</th>
+                                    <th>Company</th>
+                                    <th>Reporting Position</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var position in Model)
+                                {
+                                    <tr>
+                                        <td>@position.Name</td>
+                                        @if (position.Company != null)
+                                        {
+                                            <td>@position.Company.Name</td>
+                                        }
+                                        else
+                                        {
+                                            <td>Null</td>
+                                        }
+                                        @if (position.ReportingPosition != null)
+                                        {
+                                            <td>@position.ReportingPosition.Name</td>
+                                        }
+                                        else
+                                        {
+                                            <td>Null</td>
+                                        }
+                                        <td>
+                                            <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
+                                            <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
 
-                  </table>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-</main>
+    </main>
+@section scripts
+{
+
+    <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#companyList').DataTable({
+                language: {
+                    searchPlaceholder: 'Search Company',
+                    sSearch: '',
+                    sLengthMenu: 'Show _MENU_',
+                    sLength: 'dataTables_length',
+                    oPaginate: {
+                        sFirst: '<i class="material-icons">chevron_left</i>',
+                        sPrevious: '<i class="material-icons">chevron_left</i>',
+                        sNext: '<i class="material-icons">chevron_right</i>',
+                        sLast: '<i class="material-icons">chevron_right</i>'
+                    }
+                }
+            });
+            $('.dataTables_length select').addClass('browser-default');
+        });
+    </script>
+}
+
+
 
